tests/res/assignment/error_lvalue_class.say
type A {}
type B {}
A = B; // error: Invalid assignment: 'A' is immutable